# topar-base

./: .env.example  .gitignore  README.md  docker-compose.yml  domain_examples_full_fields_main_and_eksmo.json  domain_examples_main_products.json
.github/workflows/: desktop-build.yml
backend/: .env.example  Dockerfile  MOBILE_API.md  go.mod  go.sum  main.go
backend/cmd/convert_client_products/: main.go
backend/internal/config/: config.go
backend/internal/db/: mongo.go  redis.go
backend/internal/handlers/: auth_handler.go  blog_handler.go  (+12 more)
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  styles.css
topar-desktop/: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  BUILD_SUCCESS.md  PARSER_TEST_RESULTS.md  PROGRESS_TRACKING_STATUS.md  README.md  REBUILD_SUCCESS.md  SETUP.md  SYNC_AND_STATE_MANAGEMENT.md  index.html  package-lock.json  package.json  vite.config.ts
topar-desktop/src/: App.tsx  main.tsx  styles.css
topar-desktop/src-tauri/: Cargo.toml  tauri.conf.json
topar-desktop/src-tauri/icons/: icon.icns
topar-desktop/src-tauri/parser_engine/: crawler.py  extractor.py  main.py  parser.py  requirements.txt
topar-desktop/src-tauri/src/: main.rs
topar-desktop/src-tauri/src/commands/: database.rs  mod.rs  parser.rs  sync.rs
topar-desktop/src-tauri/src/db/: mod.rs  operations.rs  operations.rs.bak  schema.rs
topar-desktop/src-tauri/src/parser/: engine.rs  mod.rs  progress.rs
topar-desktop/src-tauri/src/sync/: client.rs  compare.rs  mod.rs
topar-parser-app/: README.md  app.js  index.html  styles.css
(+67 files in other folders)
